[tool.poetry]
name = "check-availability"
version = "0.1.1"
description = ""
authors = ["ewen-lbh <ewen.lebihan7@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ewen-lbh/check-availability"
include = ["check_availability/services.json"]

[tool.poetry.scripts]
check-availability = "check_availability.cli:run"

[tool.poetry.dependencies]
python = "^3.6"
docopt = "^0.6.2"
pastel = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
